@@ -36,32 +36,21 @@ javafx {
 }
 
 dependencies {
-    implementation('org.controlsfx:controlsfx:11.1.2')
-//    implementation('com.dlsc.formsfx:formsfx-core:11.5.0') {
-//        exclude(group: 'org.openjfx')
-//    }
-//    implementation('net.synedra:validatorfx:0.4.0') {
-//        exclude(group: 'org.openjfx')
-//    }
-
+    implementation 'org.controlsfx:controlsfx:11.1.2'
     implementation 'org.kordamp.ikonli:ikonli-unicons-pack:12.3.1'
     implementation 'com.jfoenix:jfoenix:9.0.10'
     implementation 'org.jfxtras:jfxtras-controls:17-r1'
-//    implementation 'com.dlsc.gemsfx:gemsfx:1.72.0'
     implementation 'io.github.palexdev:materialfx:11.16.1'
     implementation 'org.hibernate:hibernate-core:6.2.0.CR3'
     implementation 'mysql:mysql-connector-java:8.0.33'
     implementation 'cglib:cglib:3.3.0'
-    implementation('jakarta.persistence:jakarta.persistence-api:2.2.3')
-//    testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
-//    testImplementation 'junit:junit:4.13.1'
-//    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
+    implementation 'jakarta.persistence:jakarta.persistence-api:2.2.3'
+    implementation 'org.apache.pdfbox:pdfbox:2.0.28'
 }
 
 run{
     jvmArgs = [
             "--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED",
-//            "--add-exports=javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED",
             "--add-exports=javafx.base/com.sun.javafx.binding=ALL-UNNAMED",
             "--add-exports=javafx.base/com.sun.javafx.event=ALL-UNNAMED",
             "--add-exports=javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED",
